--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Projects — Aniket Humbe</title>
-  <link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="styles.css?v=2" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
