Colab link updated

--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
         </p>
         <div class="project-links">
           <a href="https://github.com/humbeaniket2006-max/Ocular_Core_Lite" target="_blank" class="btn-sm primary">GitHub</a>
-          <a href="https://colab.research.google.com/github/humbeaniket2006-max/Ocular_Core_Lite/blob/main/demo.ipynb" target="_blank" class="btn-sm secondary">Live Demo</a>
+          <a href="https://colab.research.google.com/drive/1HcbmB78tEY-DQFgy-eJVFzVNXpNR0P9G?usp=sharing" target="_blank" class="btn-sm secondary">Live Demo</a>
         </div>
       </div>
     </article>
